# yamr

./: .travis.yml  CMakeLists.txt  README.md  common.hpp  hashSorter.cpp  hashSorter.hpp  main.cpp  mapper.cpp  mapper.hpp  min_pref_handler.cpp  min_pref_handler.hpp  reducer.cpp  reducer.hpp  test_MinPrefix.cpp  test_mapper.cpp  test_shuffle.cpp  test_utils.cpp  utils.cpp  utils.hpp
example_data_m4_r3/: input.txt  outMapped1  outMapped2  outMapped3  outMapped4  outReduced1  outReduced2  outReduced3  outShuffle1  outShuffle2  outShuffle3
